test/testdata/number/times_non_int_string_error.lox
print 2.5 * "hello"; // error: cannot multiply 'string' by non-integer 'number'
